<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="ConfirmarDatos">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/titulo2"
    android:textSize="@dimen/tamaño_letra"
    android:textStyle="bold"
    android:layout_gravity="center"/>

<TextView
    android:id="@+id/tvNombrecompleto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/nombrecompleto"
    android:textSize="@dimen/tamaño_letra_for"
    android:layout_marginTop="@dimen/espacio_top"/>

<TextView
    android:id="@+id/tvDate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/date"
    android:textSize="@dimen/tamaño_letra_for"
    android:layout_marginTop="@dimen/espacio_top"/>

<TextView
    android:id="@+id/tvEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/email"
    android:textSize="@dimen/tamaño_letra_for"
    android:layout_marginTop="@dimen/espacio_top"/>

<TextView
    android:id="@+id/tvTelefono"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/telefono"
    android:textSize="@dimen/tamaño_letra_for"
    android:layout_marginTop="@dimen/espacio_top"/>

<TextView
    android:id="@+id/tvDescripcióndecontacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/descripcióndecontacto"
    android:textSize="@dimen/tamaño_letra_for"
    android:layout_marginTop="@dimen/espacio_top"/>

<Button
    android:id="@+id/btnEditar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btneditar"
    android:layout_marginTop="@dimen/espacio_top"/>

</LinearLayout>