<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/titulo"
      android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/titulo">

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/espacio_top"
                android:hint="@string/nombrecompleto"
                android:inputType="text"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datetitulo"
            android:layout_marginTop="@dimen/espacio_top"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:layout_marginTop="@dimen/espacio_top"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/telefono"
            android:inputType="number|phone"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editDescripcióndecontacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/descripcióndecontacto"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnsiguiente"/>

    </LinearLayout>

</RelativeLayout>